--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -33,7 +33,7 @@
     <div class="enter">
       <a href="/auth/registration"><button class="btn btn-outline-success my-2 my-sm-0" type="submit">Registration</button></a>
       <a href="/auth/login"><button style="margin-right: 20px" class="btn btn-outline-success my-2 my-sm-0" type="submit">Login</button></a>
-      <a href="https://oauth.vk.com/authorize?client_id=7327798&display=page&redirect_uri=&scope=friends,photos,status,docs,groups,stats,email&response_type=token&v=5.52"><button style="margin-right: 20px" class="btn btn-outline-success my-2 my-sm-0" type="submit">Test</button></a>
+      <a href="https://oauth.vk.com/authorize?client_id=7327798&display=page&redirect_uri=https://counter-likes.herokuapp.com&scope=friends,photos,status,docs,groups,stats,email&response_type=token&v=5.52"><button style="margin-right: 20px" class="btn btn-outline-success my-2 my-sm-0" type="submit">Test</button></a>
     </div>
     {{/if}}
   </div>
