--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -7,7 +7,7 @@
   <title>Counter-likes</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   <link rel="stylesheet" href="/stylesheets/style.css">
-  {{!-- <script defer src="/js/main.js"></script> --}}
+   <link rel="shortcut icon" href="/images/favicon.gif" type="image/gif">
   {{!-- <script defer src="/javascripts/application.js"></script> --}}
   <script defer src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
   <script defer src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
@@ -16,7 +16,7 @@
 
 <body>
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a style="color: orange" class="navbar-brand" href="/"><strong>DBC</strong></a>
+  <a style="color: orange" class="navbar-brand" href="/"><strong>Counter-likes</strong></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -24,16 +24,14 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
     </ul>
-    {{#if username}}
+    {{#if user_id}}
       <div class="enter">
       <a href="/personal"><button class="btn btn-outline-success my-2 my-sm-0" type="submit">{{username}}</button></a>
-      <a href="/auth/logout"><button style="margin-right: 20px" class="btn btn-outline-success my-2 my-sm-0" type="submit">Logout</button></a>
+      <a href="/auth/logout"><button style="margin-right: 20px" class="btn btn-outline-success my-2 my-sm-0" type="submit">Выход</button></a>
     </div>
     {{else}}
     <div class="enter">
-      <a href="/auth/registration"><button class="btn btn-outline-success my-2 my-sm-0" type="submit">Registration</button></a>
-      <a href="/auth/login"><button style="margin-right: 20px" class="btn btn-outline-success my-2 my-sm-0" type="submit">Login</button></a>
-      <a href="https://oauth.vk.com/authorize?client_id=7327798&redirect_uri=https://counter-likes.herokuapp.com/reg/&scope=friends,photos,status,docs,groups,stats,email&response_type=code&v=5.52"><button style="margin-right: 20px" class="btn btn-outline-success my-2 my-sm-0" type="submit">Test</button></a>
+      <a href="https://oauth.vk.com/authorize?client_id=7327798&redirect_uri=https://counter-likes.herokuapp.com/reg/&scope=friends,photos,status,docs,groups,stats,email&response_type=code&v=5.52"><button style="margin-right: 20px" class="btn btn-outline-success my-2 my-sm-0" type="submit">Регистрация</button></a>
     </div>
     {{/if}}
   </div>  
