--- a/views/login.hbs
+++ b/views/login.hbs
@@ -1,16 +1,3 @@
 <div id="auth-my">
-
-<form action="/auth/login" method="POST" name="formLogin">
-  <div class="form-group">
-    <label for="exampleInputEmail1">Email address</label>
-    <input name="email" type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" required>
-    <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
-  </div>
-  <div class="form-group">
-    <label for="exampleInputPassword1">Password</label>
-    <input name="password" type="password" class="form-control" id="exampleInputPassword1" required>
-  </div>
-  <button type="submit" class="btn btn-primary">Submit</button>
-</form>
-<div class="err"></div>
+<h1>Соло проект Elbrus Bootcamp</h1>
 </div>
