--- a/views/login.hbs
+++ b/views/login.hbs
@@ -1,3 +1,4 @@
 <div id="auth-my">
-<h1>Соло проект Elbrus Bootcamp</h1>
+  <h1>Соло проект Elbrus Bootcamp</h1>
+  <h2>Использование API Vkontakte</h2>
 </div>
