--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,6 +1,6 @@
 <h1>{{title}}</h1>
 <p>Welcome to {{title}}</p>
 
-{{#if user_id}}
-  <h2>Main page {{user_id}}</h2>
+{{#if username}}
+  <h2>Main page {{username}}</h2>
 {{/if}}
