--- a/views/login.hbs
+++ b/views/login.hbs
@@ -1,4 +1,7 @@
-<div id="auth-my">
-  <h1>Соло проект Elbrus Bootcamp</h1>
-  <h2>Использование API Vkontakte</h2>
-</div>
+<p class='start'>
+  Соло проект Elbrus Bootcamp
+  <span>
+    Counter-likes
+  </span>
+  &mdash; Использование API Vkontakte &mdash;
+</p>
