--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -33,7 +33,7 @@
     </div>
     {{else}}
     <div class="enter">
-      <a href="https://oauth.vk.com/authorize?client_id=7327798&redirect_uri=http://counter-likes.herokuapp.com/auth/reg/&scope=friends,photos,status,docs,groups,stats,email&response_type=code&v=5.52"><button style="margin-right: 20px" class="btn btn-outline-success my-2 my-sm-0" type="submit">Регистрация</button></a>
+      <a href="https://oauth.vk.com/authorize?client_id=7327798&redirect_uri=https://counter-likes.herokuapp.com/auth/reg/&scope=friends,photos,status,docs,groups,stats,email&response_type=code&v=5.52"><button style="margin-right: 20px" class="btn btn-outline-success my-2 my-sm-0" type="submit">Регистрация</button></a>
     </div>
     {{/if}}
   </div>  
